--- a/code/soln/chap02soln.ipynb
+++ b/code/soln/chap02soln.ipynb
@@ -1354,10 +1354,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After 60 minutes, you might see that the number of bike at Olin is negative.  We'll fix that problem soon.\n",
+    "After 60 minutes, you might see that the number of bike at Olin is negative.  We'll fix that problem in the next notebook.\n",
     "\n",
     "But first, we want to plot the results."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
