--- a/code/soln/chap21soln.ipynb
+++ b/code/soln/chap21soln.ipynb
@@ -1923,7 +1923,8 @@
     "    \"\"\"Computes drag force in the opposite direction of `v`.\n",
     "    \n",
     "    v: velocity\n",
-    "    \n",
+    "    system: System object\n",
+    "\n",
     "    returns: drag force\n",
     "    \"\"\"\n",
     "    unpack(system)\n",
@@ -2771,7 +2772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
