Updating case studies

--- a/code/soln/filter_soln.ipynb
+++ b/code/soln/filter_soln.ipynb
@@ -1655,7 +1655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the phase offsets, there are small differences between the theoretical results and our estimates, but that is primarily because it is not easy to estimate phase offsets precisely from numerical results."
+    "For the phase offsets, there are small differences between the theoretical results and our estimates, but that is probably because it is not easy to estimate phase offsets precisely from numerical results."
    ]
   },
   {
