--- a/code/soln/wall_soln.ipynb
+++ b/code/soln/wall_soln.ipynb
@@ -733,26 +733,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def require_units(x, units):\n",
-    "    \"\"\"Apply units to `x`, if necessary.\n",
-    "    \n",
-    "    x: Quantity or number\n",
-    "    units: Pint Units object\n",
-    "    \n",
-    "    returns: Quantity\n",
-    "    \"\"\"\n",
-    "    if isinstance(x, Quantity):\n",
-    "        return x.to(units)\n",
-    "    else:\n",
-    "        return Quantity(x, units)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1341,6 +1321,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>R1</th>\n",
+       "      <td>0.076 kelvin * meter ** 2 / watt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R2</th>\n",
+       "      <td>0.272 kelvin * meter ** 2 / watt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R3</th>\n",
+       "      <td>0.078 kelvin * meter ** 2 / watt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C1</th>\n",
+       "      <td>212900.0 joule / kelvin / meter ** 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C2</th>\n",
+       "      <td>113100.0 joule / kelvin / meter ** 2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "R1        0.076 kelvin * meter ** 2 / watt\n",
+       "R2        0.272 kelvin * meter ** 2 / watt\n",
+       "R3        0.078 kelvin * meter ** 2 / watt\n",
+       "C1    212900.0 joule / kelvin / meter ** 2\n",
+       "C2    113100.0 joule / kelvin / meter ** 2\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = Params(\n",
+    "    R1 = 0.076 * m**2 * K / W,\n",
+    "    R2 = 0.272 * m**2 * K / W,\n",
+    "    R3 = 0.078 * m**2 * K / W,\n",
+    "    C1 = 212900 * J / m**2 / K,\n",
+    "    C2 = 113100 * J / m**2 / K)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1349,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,12 +1419,11 @@
     "    returns: array of float\n",
     "    \"\"\"\n",
     "    print(params)\n",
-    "    R1, R2, R3, C1, C2 = params\n",
     "    system = make_system(params, data)\n",
     "    results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
     "    Q_frame = recompute_fluxes(results, system)\n",
     "    errors = compute_error(Q_frame, data)\n",
-    "    print(np.sqrt(np.mean(errors**2)))\n",
+    "    print('RMSE', np.sqrt(np.mean(errors**2)))\n",
     "    return errors"
    ]
   },
@@ -1380,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1449,7 @@
       "C1    212900.0 joule / kelvin / meter ** 2\n",
       "C2    113100.0 joule / kelvin / meter ** 2\n",
       "dtype: object\n",
-      "1.8330081709528363\n"
+      "RMSE 1.8330081709528363\n"
      ]
     },
     {
@@ -1403,7 +1459,7 @@
        "        1.58928364,  3.71097458])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1429,47 +1485,47 @@
      "output_type": "stream",
      "text": [
       "[7.600e-02 2.720e-01 7.800e-02 2.129e+05 1.131e+05]\n",
-      "1.8330081709528363\n",
+      "RMSE 1.8505924115934524\n",
       "[7.600e-02 2.720e-01 7.800e-02 2.129e+05 1.131e+05]\n",
-      "1.8330081709528363\n",
+      "RMSE 1.8505924115934524\n",
       "[7.600e-02 2.720e-01 7.800e-02 2.129e+05 1.131e+05]\n",
-      "1.8330081709528363\n",
+      "RMSE 1.8505924115934524\n",
       "[7.60000011e-02 2.72000000e-01 7.80000000e-02 2.12900000e+05\n",
       " 1.13100000e+05]\n",
-      "1.7300868434193366\n",
+      "RMSE 1.8555753453523043\n",
       "[7.60000000e-02 2.72000004e-01 7.80000000e-02 2.12900000e+05\n",
       " 1.13100000e+05]\n",
-      "1.7627180339685042\n",
+      "RMSE 1.8432262123392518\n",
       "[7.60000000e-02 2.72000000e-01 7.80000012e-02 2.12900000e+05\n",
       " 1.13100000e+05]\n",
-      "1.716533580488767\n",
+      "RMSE 1.901052298632084\n",
       "[7.60000000e-02 2.72000000e-01 7.80000000e-02 2.12900003e+05\n",
       " 1.13100000e+05]\n",
-      "1.745438689770045\n",
+      "RMSE 1.9141948565632672\n",
       "[7.60000000e-02 2.72000000e-01 7.80000000e-02 2.12900000e+05\n",
       " 1.13100002e+05]\n",
-      "1.7054472105431526\n",
-      "[7.60000011e-02 2.71999998e-01 7.80000003e-02 2.12899996e+05\n",
-      " 1.13100002e+05]\n",
-      "1.7287351323167102\n",
-      "[7.60000023e-02 2.71999998e-01 7.80000003e-02 2.12899996e+05\n",
-      " 1.13100002e+05]\n",
-      "1.7353121800108524\n",
-      "[7.60000011e-02 2.72000002e-01 7.80000003e-02 2.12899996e+05\n",
-      " 1.13100002e+05]\n",
-      "1.7271514386182858\n",
-      "[7.60000011e-02 2.71999998e-01 7.80000014e-02 2.12899996e+05\n",
-      " 1.13100002e+05]\n",
-      "1.8277640599966143\n",
-      "[7.60000011e-02 2.71999998e-01 7.80000003e-02 2.12899999e+05\n",
-      " 1.13100002e+05]\n",
-      "1.7476813947332157\n",
-      "[7.60000011e-02 2.71999998e-01 7.80000003e-02 2.12899996e+05\n",
-      " 1.13100003e+05]\n",
-      "1.741284371703492\n",
-      "[7.60000002e-02 2.72000001e-01 7.79999998e-02 2.12899999e+05\n",
-      " 1.13100003e+05]\n",
-      "1.8125023677598058\n"
+      "RMSE 1.9254240170566361\n",
+      "[7.60000006e-02 2.72000019e-01 7.79999992e-02 2.12899980e+05\n",
+      " 1.13100005e+05]\n",
+      "RMSE 1.846084441287066\n",
+      "[7.60000017e-02 2.72000019e-01 7.79999992e-02 2.12899980e+05\n",
+      " 1.13100005e+05]\n",
+      "RMSE 1.8221067418257664\n",
+      "[7.60000006e-02 2.72000023e-01 7.79999992e-02 2.12899980e+05\n",
+      " 1.13100005e+05]\n",
+      "RMSE 1.8502383692024875\n",
+      "[7.60000006e-02 2.72000019e-01 7.80000003e-02 2.12899980e+05\n",
+      " 1.13100005e+05]\n",
+      "RMSE 1.8005638751695812\n",
+      "[7.60000006e-02 2.72000019e-01 7.79999992e-02 2.12899983e+05\n",
+      " 1.13100005e+05]\n",
+      "RMSE 1.821050271762518\n",
+      "[7.60000006e-02 2.72000019e-01 7.79999992e-02 2.12899980e+05\n",
+      " 1.13100007e+05]\n",
+      "RMSE 1.8088000228677374\n",
+      "[7.59999998e-02 2.72000016e-01 7.80000007e-02 2.12899981e+05\n",
+      " 1.13100010e+05]\n",
+      "RMSE 1.8361042667244358\n"
      ]
     }
    ],
@@ -1486,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1572,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>fvec</th>\n",
-       "      <td>[-0.3361054223493216, -0.43247734043019825, -0...</td>\n",
+       "      <td>[-0.3361052367318642, -0.6843824494040387, -0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>nfev</th>\n",
@@ -1524,7 +1580,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>fjac</th>\n",
-       "      <td>[[-16181312907.092773, -6.661555079683389e-13,...</td>\n",
+       "      <td>[[-2310206065.5804176, -1112552470.6892738, -2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ipvt</th>\n",
@@ -1532,11 +1588,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>qtf</th>\n",
-       "      <td>[-6.77599116199427, -4.378864361384611, 3.8388...</td>\n",
+       "      <td>[4.031779346939402, -0.13667226215662664, 1.26...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cov_x</th>\n",
-       "      <td>[[9.435612685579853e-20, -9.166224763051902e-2...</td>\n",
+       "      <td>[[6.353204439137648e-17, 1.4331161896476686e-1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mesg</th>\n",
@@ -1551,18 +1607,18 @@
        "</div>"
       ],
       "text/plain": [
-       "fvec     [-0.3361054223493216, -0.43247734043019825, -0...\n",
+       "fvec     [-0.3361052367318642, -0.6843824494040387, -0....\n",
        "nfev                                                    13\n",
-       "fjac     [[-16181312907.092773, -6.661555079683389e-13,...\n",
+       "fjac     [[-2310206065.5804176, -1112552470.6892738, -2...\n",
        "ipvt                                       [3, 1, 2, 5, 4]\n",
-       "qtf      [-6.77599116199427, -4.378864361384611, 3.8388...\n",
-       "cov_x    [[9.435612685579853e-20, -9.166224763051902e-2...\n",
+       "qtf      [4.031779346939402, -0.13667226215662664, 1.26...\n",
+       "cov_x    [[6.353204439137648e-17, 1.4331161896476686e-1...\n",
        "mesg     The relative error between two consecutive ite...\n",
        "ier                                                      2\n",
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,15 +1628,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The relative error between two consecutive iterates is at most 0.000000'"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "details.mesg"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best params are only slightly different from the starting place, which suggests the starting place is at least locally optimal. "
+    "The best params are only slightly different from the starting place. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1622,11 +1698,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C1</th>\n",
-       "      <td>212899.996147</td>\n",
+       "      <td>212899.990310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C2</th>\n",
-       "      <td>113100.001741</td>\n",
+       "      <td>113100.012281</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1636,12 +1712,12 @@
        "R1         0.076000\n",
        "R2         0.272000\n",
        "R3         0.078000\n",
-       "C1    212899.996147\n",
-       "C2    113100.001741\n",
+       "C1    212899.990310\n",
+       "C2    113100.012281\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,14 +1735,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7287351323167102\n"
+      "1.7908027900352392\n"
      ]
     }
    ],
@@ -1689,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1731,6 +1807,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise:** Try starting the model with a different set of parameters and see if it moves toward the parameters in the paper.\n",
+    "\n",
+    "I found that no matter where I start, `fit_leastsq` doesn't move far, which suggests that it is not able to optimize the parameters effectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Notes\n",
     "\n",
     "Notes on working with degC.\n",
@@ -1740,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
