--- a/code/soln/chap25soln.ipynb
+++ b/code/soln/chap25soln.ipynb
@@ -46,6 +46,10 @@
     "\n",
     "Suppose I am sitting at a table with a pot of tea on the turntable directly in front of me, and the person sitting directly opposite asks me to pass the tea.  I push on the edge of the turntable with 1 Newton of force until it has turned 0.5 radians, then let go.  The turntable glides until it comes to a stop 1.5 radians from the starting position.  How much force should I apply for a second push so the teapot glides to a stop directly opposite me?\n",
     "\n",
+    "The following figure shows the scenario, where `F` is the force I apply to the turntable at the perimeter, perpendicular to the moment arm, `r`, and `tau` is the resulting torque.  The blue circle near the bottom is the teapot.\n",
+    "\n",
+    "![](diagrams/teapot.png)\n",
+    "\n",
     "We'll answer this question in these steps:\n",
     "\n",
     "1.  We'll use the results from the first push to estimate the coefficient of friction for the turntable.\n",
